code25_all/scala/2765473.txt
_=
object X { var x: Int = 0; def y_=(n : Int) { x = n }}

X.y = 1

X.y_=(1)
<console>:6: error: value y is not a member of object X
       X.y = 1
         ^

scala> X.y_= 1
<console>:1: error: ';' expected but integer literal found.
       X.y_= 1
             ^

